# sift

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cache/: pr_cache.json
eval/: fixtures.py  run_eval.py  scorers.py  tasks.yaml
src/agent/: __init__.py  agent.py  backends.py  cli.py  config.py  github_client.py  offline.py  schemas.py
src/agent/indexing/: build_index.py  chunker.py  loader.py
src/agent/tools/: doc_lookup.py  issue_clustering.py  pr_triage.py
tests/: test_agent_routing.py  test_chunker.py  test_tools.py
